[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/huds/pause_menu/themes/PauseMenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://gui/huds/pause_menu/scripts/PauseMenuPvP.gd" type="Script" id=2]

[node name="PauseMenuPvP" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.560784 )

[node name="CenterContainer" type="CenterContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 832.0
margin_top = 385.0
margin_right = 1088.0
margin_bottom = 695.0
custom_constants/separation = 50

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 64.0
text = "MENU"
align = 1
valign = 1

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 256.0
margin_bottom = 146.0
text = "RESUME GAME"

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 256.0
margin_bottom = 228.0
text = "RELOAD GAME"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 256.0
margin_bottom = 310.0
text = "EXIT GAME"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
